finissions page home et about, création page detail

--- a/src/components/card/index.scss
+++ b/src/components/card/index.scss
@@ -4,9 +4,13 @@
   width: 25%;
   position: relative;
   margin: 0;
+  @media (max-width: 1024px) {
+    width: 40%;
+  }
 
   &_img {
-    height: 270px;
+    height: 18rem;
+    width: 100%;
     object-fit: cover;
     border-radius: 25px;
     opacity: 0.8;
