--- a/src/pages/home/index.scss
+++ b/src/pages/home/index.scss
@@ -7,9 +7,9 @@
   border-radius: 25px;
   margin-top: 25px;
   margin-bottom: 25px;
-  margin-left: 100px;
-  margin-right: 100px;
-  gap: 60px;
+  margin-left: 8%;
+  margin-right: 8%;
+  gap: 70px;
   padding-bottom: 50px;
   padding-top: 50px;
 }
