--- a/src/components/assets/css/index.css
+++ b/src/components/assets/css/index.css
@@ -1,3 +1,121 @@
-.collapse_bar--img {
-  background-color: black;
+.header {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin-top: 45px;
+  margin-bottom: 50px;
+  margin-left: 8%;
+  margin-right: 8%;
+}
+.header_logo {
+  height: 68px;
+}
+.header_link {
+  display: flex;
+  align-items: center;
+  gap: 30%;
+  width: 250px;
+}
+.header_link > a {
+  color: #ff6060;
+  text-align: right;
+  font-family: Montserrat;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 142.6%;
+  text-decoration: none;
+}
+.header_link > a_active {
+  text-decoration: underline;
+}/*# sourceMappingURL=index.css.map */erline;
+  margin-bottom: 139px;
+}/*# sourceMappingURL=index.css.map */;
+  font-weight: 500;
+  line-height: 142.6%;
+  margin: 0;
+}
+.collapse_bar--img-close {
+  animation: rotateclose 0.5s ease-in-out;
+  cursor: pointer;
+}
+.collapse_bar--img-open {
+  animation: rotateopen 0.5s ease-in-out;
+  transform: rotate(180deg);
+  cursor: pointer;
+}
+.collapse_p {
+  margin: 0;
+  background: var(--Gray, #f6f6f6);
+  color: #ff6060;
+  font-family: Montserrat;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 142.6%;
+  transform-origin: all 0.7s ease-in-out;
+  padding: 1rem;
+  border-radius: 5px;
+  z-index: 1;
+}
+.collapse_p--close:active {
+  animation: progress-p-close 0.5s ease-in-out;
+}
+.collapse_p--open {
+  animation: progress-p-open 0.5s ease-in-out;
+}
+
+@keyframes rotateopen {
+  0% {
+    transform: rotate3d(0, 0, 1, 360deg);
+  }
+  25% {
+    transform: rotate3d(0, 0, 1, 300deg);
+  }
+  50% {
+    transform: rotate3d(0, 0, 1, 250deg);
+  }
+  75% {
+    transform: rotate3d(0, 0, 1, 200deg);
+  }
+  100% {
+    transform: rotate3d(0, 0, 1, 180deg);
+  }
+}
+@keyframes rotateclose {
+  0% {
+    transform: rotate3d(0, 0, 1, 180deg);
+  }
+  25% {
+    transform: rotate3d(0, 0, 1, 200deg);
+  }
+  50% {
+    transform: rotate3d(0, 0, 1, 250deg);
+  }
+  75% {
+    transform: rotate3d(0, 0, 1, 300deg);
+  }
+  100% {
+    transform: rotate3d(0, 0, 1, 360deg);
+  }
+}
+@keyframes progress-p-open {
+  from {
+    transform: translateY(-30px);
+    opacity: 0;
+  }
+  to {
+    opacity: 100%;
+    transform: translateY(0px);
+  }
+}
+@keyframes progress-p-close {
+  from {
+    height: 100%;
+    opacity: 0;
+  }
+  to {
+    height: 0;
+    transform: translateY(-30px);
+  }
 }/*# sourceMappingURL=index.css.map */
