--- a/src/components/banner/index.scss
+++ b/src/components/banner/index.scss
@@ -6,8 +6,8 @@
   position: relative;
   margin-top: 50px;
   margin-bottom: 50px;
-  margin-left: 100px;
-  margin-right: 100px;
+  margin-left: 8%;
+  margin-right: 8%;
   border-radius: 50px;
 
   &_title {
