--- a/src/components/header/index.scss
+++ b/src/components/header/index.scss
@@ -4,8 +4,8 @@
   justify-content: space-between;
   margin-top: 45px;
   margin-bottom: 50px;
-  margin-left: 100px;
-  margin-right: 100px;
+  margin-left: 8%;
+  margin-right: 8%;
 
   &_logo {
     height: 68px;
