--- a/src/components/banner/index.scss
+++ b/src/components/banner/index.scss
@@ -4,11 +4,12 @@
   align-items: center;
   justify-content: center;
   position: relative;
-  margin-top: 50px;
-  margin-bottom: 50px;
-  margin-left: 8%;
-  margin-right: 8%;
+  margin: 50px 8% 50px 8%;
   border-radius: 50px;
+
+  @media (max-width: 767px) {
+    margin: 20px 5% 20px 5%;
+  }
 
   &_title {
     position: absolute;
@@ -18,6 +19,13 @@
     font-style: normal;
     font-weight: 500;
     line-height: 142.6%;
+
+    @media (max-width: 767px) {
+      font-size: 24px;
+      line-height: 100%;
+      width: 46%;
+      left: 20px;
+    }
   }
 
   &_img {
@@ -25,5 +33,9 @@
     height: 225px;
     width: 100%;
     border-radius: 25px;
+    @media (max-width: 767px) {
+      height: 110px;
+      border-radius: 10px;
+    }
   }
 }
