--- a/src/components/card/index.scss
+++ b/src/components/card/index.scss
@@ -1,13 +1,17 @@
 .card {
   display: flex;
   flex-direction: column;
-  width: 25%;
+  // flex-basis: 30%;
+  // width: 25%;
   position: relative;
   margin: 0;
-  @media (max-width: 1024px) {
-    width: 40%;
-  }
 
+  &_link {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+  }
   &_img {
     height: 18rem;
     width: 100%;
