--- a/src/components/collapse/index.scss
+++ b/src/components/collapse/index.scss
@@ -1,8 +1,3 @@
-.container-collapse {
-  margin: 20px 8% 70px 8%;
-  gap: 30px;
-}
-
 .collapse {
   display: flex;
   flex-direction: column;
@@ -21,6 +16,10 @@
     border-radius: 5px;
     z-index: 2;
 
+    @media (max-width: 767px) {
+      height: 30px;
+    }
+
     &--title {
       display: flex;
       justify-content: space-between;
@@ -34,6 +33,10 @@
       font-weight: 500;
       line-height: 142.6%;
       margin: 0;
+      @media (max-width: 767px) {
+        height: 30px;
+        font-size: 17px;
+      }
     }
 
     &--img-close {
