--- a/src/components/error/index.scss
+++ b/src/components/error/index.scss
@@ -3,6 +3,10 @@
   flex-direction: column;
   align-items: center;
 
+  @media (max-width: 767px) {
+    gap: 113px;
+  }
+
   &_title {
     color: #ff6060;
     text-align: center;
@@ -12,6 +16,12 @@
     font-weight: 700;
     line-height: 60%;
 
+    @media (max-width: 767px) {
+      font-size: 96px;
+      margin-top: 113px;
+      margin-bottom: 0;
+    }
+
     &--p {
       color: #ff6060;
       font-family: Montserrat;
@@ -19,6 +29,11 @@
       font-style: normal;
       font-weight: 500;
       line-height: 160.6%;
+      @media (max-width: 767px) {
+        text-align: center;
+        font-size: 18px;
+        width: 55%;
+      }
     }
   }
   & > a {
@@ -27,7 +42,7 @@
     font-size: 18px;
     font-style: normal;
     font-weight: 500;
-    line-height: 142.6%; /* 25.668px */
+    line-height: 142.6%;
     text-decoration-line: underline;
     margin-bottom: 139px;
   }
