--- a/src/components/header/index.scss
+++ b/src/components/header/index.scss
@@ -2,20 +2,34 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  margin-top: 45px;
-  margin-bottom: 50px;
-  margin-left: 8%;
-  margin-right: 8%;
+  margin: 45px 8% 50px 8%;
+
+  @media (max-width: 767px) {
+    margin: 20px 5% 20px 5%;
+    gap: 25%;
+  }
 
   &_logo {
     height: 68px;
+
+    @media (max-width: 767px) {
+      height: 46px;
+    }
   }
 
   &_link {
     display: flex;
     align-items: center;
-    gap: 30%;
-    width: 250px;
+    width: 21%;
+    gap: 40px;
+
+    @media (max-width: 1024px) {
+      width: 29%;
+    }
+    @media (max-width: 767px) {
+      gap: 10%;
+      width: 26%;
+    }
     & > a {
       color: #ff6060;
       text-align: right;
@@ -25,6 +39,10 @@
       font-weight: 500;
       line-height: 142.6%;
       text-decoration: none;
+
+      @media (max-width: 767px) {
+        font-size: 17px;
+      }
 
       &_active {
         text-decoration: underline;
