--- a/src/pages/assets/css/index.css
+++ b/src/pages/assets/css/index.css
@@ -1,15 +1,53 @@
-.container-card {
+.detail {
+  display: grid;
+  justify-content: center;
+  grid-template-columns: 2;
+}
+.detail_carousel {
+  grid-column: 1/3;
+  grid-row: 1;
+}
+.detail_title {
+  grid-column: 1;
+  grid-row: 2;
+}
+.detail_title > h1 {
+  color: #FF6060;
+  font-family: Montserrat;
+  font-size: 36px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 142.6%;
+}
+.detail_title > p {
+  color: #FF6060;
+  font-family: Montserrat;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 142.6%;
+}
+.detail_host {
   display: flex;
   flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: center;
-  background-color: #f6f6f6;
-  border-radius: 25px;
-  margin-top: 25px;
-  margin-bottom: 25px;
-  margin-left: 8%;
-  margin-right: 8%;
-  gap: 70px;
-  padding-bottom: 50px;
-  padding-top: 50px;
+  justify-self: right;
+  grid-column: 2;
+  grid-row: 2;
+  -moz-text-align-last: right;
+       text-align-last: right;
+}
+.detail_host--img {
+  border-radius: 50%;
+}
+.detail_tags {
+  grid-column: 1;
+  grid-row: 3;
+}
+.detail_star {
+  grid-column: 2;
+  grid-row: 3;
+}
+.detail_collapse {
+  grid-column: 1/3;
+  grid-row: 4;
 }/*# sourceMappingURL=index.css.map */
