toutes les composantes technique sont fini, page détail (pc/mobile )

--- a/src/components/header/index.scss
+++ b/src/components/header/index.scss
@@ -20,8 +20,8 @@
   &_link {
     display: flex;
     align-items: center;
-    width: 21%;
-    gap: 40px;
+    width: 17%;
+    gap: 4%;
 
     @media (max-width: 1024px) {
       width: 29%;
