--- a/src/components/collapse/index.scss
+++ b/src/components/collapse/index.scss
@@ -65,6 +65,9 @@
     border-radius: 5px;
     z-index: 1;
 
+    &--li{
+      list-style-type:none;
+    }
     &--close:active {
       animation: progress-p-close 0.5s ease-in-out;
     }
