--- a/src/pages/detail/index.scss
+++ b/src/pages/detail/index.scss
@@ -2,15 +2,28 @@
   display: grid;
   justify-content: center;
   grid-template-columns: 2;
+  margin-bottom: 50px;
+
+  @media (max-width: 767px){
+    
+  }
 
 &_carousel{
   grid-column: 1/3;
   grid-row: 1;
+
+  @media (max-width: 767px){
+    
+  }
 }
 
 &_title{
   grid-column: 1;
   grid-row: 2;
+  @media (max-width: 767px){
+    grid-row: 2;
+    margin-left: 25px;
+  }
   & > h1{
     color: #FF6060;
     font-family: Montserrat;
@@ -18,6 +31,9 @@
     font-style: normal;
     font-weight: 500;
     line-height: 142.6%;
+    @media (max-width: 767px){
+    font-size: 24px;
+  }
   }
 
     & > p{
@@ -27,6 +43,9 @@
     font-style: normal;
     font-weight: 500;
     line-height: 142.6%;    
+    @media (max-width: 767px){
+    font-size: 14px;
+  }
   }
 }
 
@@ -37,28 +56,75 @@
   grid-column: 2;
   grid-row: 2;
   text-align-last: right;
+  gap: 20px;
+  margin-top: 24px;
+  @media (max-width: 767px){
+    grid-column: 2;
+    grid-row: 4;
+    margin: 0;
+    margin-right: 25px;
+  }
 
   &--img{
     border-radius: 50%;
+    width: 50%;
+    height: 50%;
+  }
+
+  &--p{
+    color: #FF6060;
+    text-align: right;
+    font-family: Montserrat;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 142.6%;
+    margin: 0;
   }
 }
 
 &_tags{
   grid-column: 1;
   grid-row: 3;
+
+  @media (max-width: 767px){
+    grid-row: 3;
+    margin-left: 25px;
+  }
 }
 
 &_star{
-    grid-column: 2;
-    grid-row: 3;
+  text-align: right;
+justify-content: center;
+  grid-column: 2;
+  grid-row: 3;
+
+  @media (max-width: 767px){
+    grid-column: 1;
+    grid-row: 4;
+    text-align: left;
+    align-self: center;
+    margin-left: 25px;
+  }
 }
 
 &_collapse{
+  display: grid;
+  grid-template-columns: auto auto;
   grid-column: 1/3;
   grid-row: 4;
+  gap: 70px;
+  margin-top: 24px;
+  width: 100%;
+  @media (max-width: 767px){
+    grid-column: 1/3;
+    grid-row: 5;
+    grid-template-columns: auto;
+    gap: 15px;
+    margin-top: 0;
+    margin-left: 25px;
+    width: 94%;
+  }
 }
 
-
-
-  
 }
