--- a/src/components/assets/css/index.css
+++ b/src/components/assets/css/index.css
@@ -1,39 +1,130 @@
-.carousel {
-  position: relative;
-}
-.carousel_div--span {
+.collapse {
   display: flex;
-  width: 90vw;
+  flex-direction: column;
+  justify-content: center;
 }
-.carousel_span {
-  position: relative;
-  height: 415px;
+.collapse_bar {
+  display: flex;
+  flex-direction: row;
+  align-self: center;
+  justify-content: space-between;
+  width: -webkit-fill-available;
+  height: 50px;
+  list-style: none;
+  background-color: #ff6060;
+  padding: 0 20px 0 20px;
+  border-radius: 5px;
+  z-index: 2;
 }
-.carousel_span--img {
-  height: 415px;
-  width: 100%;
-  border-radius: 25px;
+@media (max-width: 767px) {
+  .collapse_bar {
+    height: 30px;
+  }
 }
-.carousel_count {
-  position: absolute;
-  bottom: 25px;
-  left: 50%;
+.collapse_bar--title {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #ff6060;
+  height: 50px;
+  color: #fff;
+  font-family: Montserrat;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 142.6%;
+  margin: 0;
+}
+@media (max-width: 767px) {
+  .collapse_bar--title {
+    height: 30px;
+    font-size: 17px;
+  }
+}
+.collapse_bar--img-close {
+  animation: rotateclose 0.5s ease-in-out;
+  cursor: pointer;
+}
+.collapse_bar--img-open {
+  animation: rotateopen 0.5s ease-in-out;
+  transform: rotate(180deg);
+  cursor: pointer;
+}
+.collapse_p {
+  margin: 0;
+  background: var(--Gray, #f6f6f6);
+  color: #ff6060;
+  font-family: Montserrat;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 142.6%;
+  padding: 1rem;
+  border-radius: 5px;
   z-index: 1;
-  color: white;
 }
-.carousel_arrow--right {
-  position: absolute;
-  bottom: 50%;
-  right: 25px;
-  z-index: 1;
+.collapse_p--li {
+  list-style-type: none;
 }
-.carousel_arrow--left {
-  position: absolute;
-  bottom: 50%;
-  left: 25px;
-  z-index: 1;
+.collapse_p--open {
+  animation: progress-p-open 0.5s ease-in-out;
+}
+.collapse_p--close {
+  animation: progress-p-close 0.5s ease-in-out forwards;
 }
 
-.no-picture {
-  display: none;
+@keyframes rotateopen {
+  0% {
+    transform: rotate3d(0, 0, 1, 360deg);
+  }
+  25% {
+    transform: rotate3d(0, 0, 1, 300deg);
+  }
+  50% {
+    transform: rotate3d(0, 0, 1, 250deg);
+  }
+  75% {
+    transform: rotate3d(0, 0, 1, 200deg);
+  }
+  100% {
+    transform: rotate3d(0, 0, 1, 180deg);
+  }
+}
+@keyframes rotateclose {
+  0% {
+    transform: rotate3d(0, 0, 1, 180deg);
+  }
+  25% {
+    transform: rotate3d(0, 0, 1, 200deg);
+  }
+  50% {
+    transform: rotate3d(0, 0, 1, 250deg);
+  }
+  75% {
+    transform: rotate3d(0, 0, 1, 300deg);
+  }
+  100% {
+    transform: rotate3d(0, 0, 1, 360deg);
+  }
+}
+@keyframes progress-p-open {
+  from {
+    transform: translateY(-30px);
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0px);
+  }
+}
+@keyframes progress-p-close {
+  from {
+    opacity: 1;
+    transform: translateY(0px);
+  }
+  to {
+    opacity: 0;
+    height: 0;
+    transform: translateY(-30px);
+  }
 }/*# sourceMappingURL=index.css.map */
