--- a/src/pages/assets/css/index.css
+++ b/src/pages/assets/css/index.css
@@ -1,7 +1,13 @@
 .detail {
   display: grid;
   justify-content: center;
-  grid-template-columns: 2;
+  grid-template-columns: 1fr 0;
+  margin: 50px 80px 50px 80px;
+}
+@media (max-width: 767px) {
+  .detail {
+    margin: 0;
+  }
 }
 .detail_carousel {
   grid-column: 1/3;
@@ -11,6 +17,12 @@
   grid-column: 1;
   grid-row: 2;
 }
+@media (max-width: 767px) {
+  .detail_title {
+    grid-row: 2;
+    margin-left: 25px;
+  }
+}
 .detail_title > h1 {
   color: #FF6060;
   font-family: Montserrat;
@@ -18,6 +30,11 @@
   font-style: normal;
   font-weight: 500;
   line-height: 142.6%;
+}
+@media (max-width: 767px) {
+  .detail_title > h1 {
+    font-size: 24px;
+  }
 }
 .detail_title > p {
   color: #FF6060;
@@ -27,6 +44,11 @@
   font-weight: 500;
   line-height: 142.6%;
 }
+@media (max-width: 767px) {
+  .detail_title > p {
+    font-size: 14px;
+  }
+}
 .detail_host {
   display: flex;
   flex-direction: row;
@@ -35,19 +57,76 @@
   grid-row: 2;
   -moz-text-align-last: right;
        text-align-last: right;
+  gap: 20px;
+  margin-top: 24px;
+}
+@media (max-width: 767px) {
+  .detail_host {
+    grid-column: 2;
+    grid-row: 4;
+    margin: 0;
+    margin-right: 25px;
+  }
 }
 .detail_host--img {
   border-radius: 50%;
+  width: 50%;
+  height: 50%;
+}
+.detail_host--p {
+  color: #FF6060;
+  text-align: right;
+  font-family: Montserrat;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 142.6%;
+  margin: 0;
 }
 .detail_tags {
   grid-column: 1;
   grid-row: 3;
 }
+@media (max-width: 767px) {
+  .detail_tags {
+    grid-row: 3;
+    margin-left: 25px;
+    border-radius: 10px;
+  }
+}
 .detail_star {
+  text-align: right;
+  justify-content: center;
   grid-column: 2;
   grid-row: 3;
 }
+@media (max-width: 767px) {
+  .detail_star {
+    grid-column: 1;
+    grid-row: 4;
+    text-align: left;
+    align-self: center;
+    margin-left: 25px;
+  }
+}
 .detail_collapse {
+  display: grid;
+  align-items: baseline;
+  grid-template-columns: 1fr 1fr;
   grid-column: 1/3;
   grid-row: 4;
+  gap: 70px;
+  margin-top: 24px;
+  width: 100%;
+}
+@media (max-width: 767px) {
+  .detail_collapse {
+    grid-column: 1/3;
+    grid-row: 5;
+    grid-template-columns: auto;
+    gap: 15px;
+    margin-top: 0;
+    margin-left: 25px;
+    width: 94%;
+  }
 }/*# sourceMappingURL=index.css.map */
