--- a/src/pages/detail/index.scss
+++ b/src/pages/detail/index.scss
@@ -1,20 +1,20 @@
 .detail {
   display: grid;
   justify-content: center;
-  grid-template-columns: 2;
-  margin-bottom: 50px;
+  grid-template-columns: 1fr 1fr;
+  margin: 50px 80px 50px 80px;
 
   @media (max-width: 767px){
-    
+    margin: 0;
+      grid-template-columns: 1fr 0;
+
   }
 
 &_carousel{
   grid-column: 1/3;
   grid-row: 1;
 
-  @media (max-width: 767px){
-    
-  }
+  
 }
 
 &_title{
@@ -62,7 +62,8 @@
     grid-column: 2;
     grid-row: 4;
     margin: 0;
-    margin-right: 25px;
+    margin-top: 10px;
+    margin-right: 40px;
   }
 
   &--img{
@@ -90,6 +91,7 @@
   @media (max-width: 767px){
     grid-row: 3;
     margin-left: 25px;
+    border-radius: 10px;
   }
 }
 
@@ -110,7 +112,8 @@ justify-content: center;
 
 &_collapse{
   display: grid;
-  grid-template-columns: auto auto;
+  align-items: baseline;
+  grid-template-columns: 1fr 1fr;
   grid-column: 1/3;
   grid-row: 4;
   gap: 70px;
@@ -122,7 +125,7 @@ justify-content: center;
     grid-template-columns: auto;
     gap: 15px;
     margin-top: 0;
-    margin-left: 25px;
+    margin-left: 15px;
     width: 94%;
   }
 }
