push du site final

--- a/src/components/collapse/index.scss
+++ b/src/components/collapse/index.scss
@@ -9,6 +9,7 @@
     align-self: center;
     justify-content: space-between;
     width: -webkit-fill-available;
+    width: -moz-available;
     height: 50px;
     list-style: none;
     background-color: #ff6060;
